--- a/smpp-plugins/pom.xml
+++ b/smpp-plugins/pom.xml
@@ -221,4 +221,14 @@
     </pluginManagement>
   </build>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-plugin-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </reporting>
+
+
 </project>
