Fixed #21  o Added content configuration to get scm-publish:publish-scm    to work

--- a/pom.xml
+++ b/pom.xml
@@ -432,6 +432,7 @@
           <configuration>
             <pubScmUrl>${project.scm.developerConnection}</pubScmUrl>
             <scmBranch>gh-pages</scmBranch>
+            <content>${project.build.outputDirectory}/staging</content>
           </configuration>
           <executions>
             <execution>
