--- a/smpp-plugins/pom.xml
+++ b/smpp-plugins/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.soebes.smpp</groupId>
     <artifactId>smpp</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0</version>
   </parent>
 
   <packaging>pom</packaging>
@@ -98,7 +98,7 @@
               <mockRepo>
                 <source>src/it-repo</source>
               </mockRepo>
-              <proxyRepo/>
+              <proxyRepo />
             </repositories>
           </configuration>
           <executions>
