Fixed #23  o Added descriptor goal for plugins

--- a/smpp-plugins/pom.xml
+++ b/smpp-plugins/pom.xml
@@ -118,6 +118,7 @@
             <execution>
               <goals>
                 <goal>helpmojo</goal>
+                <goal>descriptor</goal>
               </goals>
             </execution>
           </executions>
