--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     <maven-invoker-plugin.version>2.0.0</maven-invoker-plugin.version>
-    <maven-jar-plugin.version>2.6</maven-jar-plugin.version>
+    <maven-jar-plugin.version>3.0.0</maven-jar-plugin.version>
     <maven-rar-plugin.version>2.4</maven-rar-plugin.version>
     <maven-javadoc-plugin.version>2.10.3</maven-javadoc-plugin.version>
     <maven-jxr-plugin.version>2.5</maven-jxr-plugin.version>
@@ -86,11 +86,12 @@
     <maven-project-info-reports-plugin.version>2.9</maven-project-info-reports-plugin.version>
     <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
     <maven-remote-resources-plugin.version>1.5</maven-remote-resources-plugin.version>
-    <maven-resources-plugin.version>2.7</maven-resources-plugin.version>
+    <maven-resources-plugin.version>3.0.0</maven-resources-plugin.version>
     <maven-scm-publish-plugin.version>1.1</maven-scm-publish-plugin.version>
     <maven-shade-plugin.version>2.4.2</maven-shade-plugin.version>
     <maven-source-plugin.version>3.0.0</maven-source-plugin.version>
     <maven-war-plugin.version>2.6</maven-war-plugin.version>
+    <maven-toolchains-plugin.version>1.1</maven-toolchains-plugin.version>
 
     <maven-site-plugin.version>3.5.1</maven-site-plugin.version>
 
@@ -391,6 +392,11 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>${maven-checkstyle-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-toolchains-plugin</artifactId>
+          <version>${maven-toolchains-plugin.version}</version>
         </plugin>
 
         <!-- Codehaus Plugins -->
