Fixed #28  o includeOpenIssues to true for GitHub report.

--- a/pom.xml
+++ b/pom.xml
@@ -577,7 +577,7 @@
         <artifactId>maven-changes-plugin</artifactId>
         <version>${maven-changes-plugin.version}</version>
         <configuration>
-          <includeOpenIssues>false</includeOpenIssues>
+          <includeOpenIssues>true</includeOpenIssues>
           <onlyMilestoneIssues>true</onlyMilestoneIssues>
           <runOnlyAtExecutionRoot>true</runOnlyAtExecutionRoot>
           <onlyCurrentVersion>true</onlyCurrentVersion>
