--- a/smpp-plugins/pom.xml
+++ b/smpp-plugins/pom.xml
@@ -21,7 +21,7 @@
     <maven-plugin-plugin.version>3.4</maven-plugin-plugin.version>
     <gmaven-plugin.version>1.5</gmaven-plugin.version>
 
-    <mrm-maven-plugin.version>1.0-beta-2</mrm-maven-plugin.version>
+    <mrm-maven-plugin.version>1.0.0</mrm-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
