--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,10 @@
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.soebes.smpp</groupId>
   <artifactId>smpp</artifactId>
-  <version>2.2.1-SNAPSHOT</version>
+  <version>2.2.1</version>
   <packaging>pom</packaging>
 
   <name>SoEBeS Maven Parent POM</name>
@@ -133,7 +130,7 @@
     <connection>scm:git:https://github.com/khmarbaise/smpp.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/khmarbaise/smpp.git</developerConnection>
     <url>https://github.com/khmarbaise/smpp</url>
-    <tag>HEAD</tag>
+    <tag>smpp-2.2.1</tag>
   </scm>
 
   <distributionManagement>
