--- a/pom.xml
+++ b/pom.xml
@@ -398,6 +398,11 @@
           <artifactId>maven-toolchains-plugin</artifactId>
           <version>${maven-toolchains-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.apache.rat</groupId>
+          <artifactId>apache-rat-plugin</artifactId>
+          <version>0.12</version>
+        </plugin>
 
         <!-- Codehaus Plugins -->
         <plugin>
