Fixed #32  o Using javadoc-no-fork, test-javadoc-no-fork of maven-javadoc-plugin  o Using generate-no-fork of jdepend-maven-plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -628,6 +628,14 @@
         <configuration>
           <quiet>true</quiet>
         </configuration>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>javadoc-no-fork</report>
+              <report>test-javadoc-no-fork</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -665,6 +673,13 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jdepend-maven-plugin</artifactId>
         <version>${jdepend-maven-plugin.version}</version>
+        <reportSets>
+          <reportSet>
+            <reports>
+              <report>generate-no-fork</report>
+            </reports>
+          </reportSet>
+        </reportSets>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
