--- a/pom.xml
+++ b/pom.xml
@@ -302,8 +302,8 @@
               ! here we override the super-pom attach-sources execution id which
               ! calls sources:jar goal. That goals forks the lifecycle,
               ! causing the generate-sources phase to be called twice for the install goal.
-              ! Starting with Maven 3.4.0 (https://issues.apache.org/jira/browse/MNG-5940)
-              ! this is not needed anymore.
+              ! See for reference https://issues.apache.org/jira/browse/MNG-5940 will be
+              ! part of the next Maven releases to make this superfluous.
             -->
             <execution>
               <id>attach-sources</id>
