--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,17 @@
 ---
 language: java
+# 
+env:
+  - MAVEN_VERSION=3.3.1
 
-# No need to make a preliminary installation.
-install: true
+# We need to make a preliminary installation of the needed
+# Maven version cause travis will offer only Maven 3.2.5
+install:
+  - "mvn -N io.takari:maven:wrapper -Dmaven=${MAVEN_VERSION}"
 
+#  - "mvn --show-version --errors --batch-mode clean verify"
 script:
-  - "mvn --show-version --errors --batch-mode clean verify"
+  - "./mvnw --show-version --errors --batch-mode clean verify"
 
 jdk:
  - oraclejdk8
