--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.soebes.smpp</groupId>
   <artifactId>smpp</artifactId>
-  <version>3.0.2-SNAPSHOT</version>
+  <version>3.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>SoEBeS Maven Parent POM</name>
@@ -115,6 +115,10 @@
     <maven.compiler.target>1.7</maven.compiler.target>
 
     <smpp.component>smpp</smpp.component>
+    <!--
+      ! set the default arguments for maven-release-plugin
+    -->
+    <arguments />
   </properties>
 
   <scm>
@@ -166,6 +170,7 @@
           <artifactId>maven-release-plugin</artifactId>
           <version>${maven-release-plugin.version}</version>
           <configuration>
+            <arguments>${arguments}</arguments>
             <goals>deploy site site:stage scm-publish:publish-scm</goals>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
