--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
     <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     <maven-ear-plugin.version>2.10.1</maven-ear-plugin.version>
     <maven-ejb-plugin.version>3.0.0</maven-ejb-plugin.version>
-    <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
     <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
     <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
     <maven-invoker-plugin.version>3.0.1</maven-invoker-plugin.version>
@@ -87,9 +87,9 @@
     <maven-site-plugin.version>3.6</maven-site-plugin.version>
 
     <!-- The following belong together -->
-    <maven-failsafe-plugin.version>2.20</maven-failsafe-plugin.version>
-    <maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.20</maven-surefire-report-plugin.version>
+    <maven-failsafe-plugin.version>2.20.1</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>2.20.1</maven-surefire-report-plugin.version>
 
 
     <!-- MojoHaus Plugins (formerly Codehaus) -->
