--- a/pom.xml
+++ b/pom.xml
@@ -465,7 +465,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.7.9</version>
+          <version>0.8.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -864,5 +864,6 @@
 
   <modules>
     <module>smpp-plugins</module>
+    <module>smpp-boot</module>
   </modules>
 </project>
