--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     <maven-war-plugin.version>3.2.2</maven-war-plugin.version>
     <maven-toolchains-plugin.version>1.1</maven-toolchains-plugin.version>
 
-    <maven-site-plugin.version>3.6</maven-site-plugin.version>
+    <maven-site-plugin.version>3.7.1</maven-site-plugin.version>
 
     <!-- The following belong together -->
     <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>
@@ -679,10 +679,10 @@
           <reportSet>
             <reports>
               <report>dependencies</report>
-              <report>project-team</report>
-              <report>mailing-list</report>
-              <report>issue-tracking</report>
-              <report>license</report>
+              <report>team</report>
+              <report>mailing-lists</report>
+              <report>issue-management</report>
+              <report>licenses</report>
               <report>scm</report>
               <report>index</report>
               <report>summary</report>
