--- a/smpp-boot/pom.xml
+++ b/smpp-boot/pom.xml
@@ -13,6 +13,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
   </properties>
 
   <name>SoEBeS Maven Parent POM for Spring Boot</name>
@@ -23,7 +24,7 @@
         <!-- Import dependency management from Spring Boot -->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-dependencies</artifactId>
-        <version>2.0.4.RELEASE</version>
+        <version>${spring-boot.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -35,7 +36,7 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>${spring-boot.version}</version>
         <executions>
           <execution>
             <goals>
