--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
     <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
 
     <!-- The minimum maven version we expect to build with. -->
-    <maven.version>3.3.1</maven.version>
+    <maven.version>3.6.0</maven.version>
 
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -117,6 +117,9 @@
       ! set the default arguments for maven-release-plugin
     -->
     <arguments />
+    <maven.compiler.target>11</maven.compiler.target>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.release>11</maven.compiler.release>
   </properties>
 
   <scm>
