--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: java
 # 
 env:
-  - MAVEN_VERSION=3.6.0
+  - MAVEN_VERSION=3.6.2
 
 # We need to make a preliminary installation of the needed
 # Maven version cause travis will offer only Maven 3.2.5
@@ -15,9 +15,10 @@ script:
 
 jdk:
  - oraclejdk8
- - oraclejdk9
+ - openjdk9
  - openjdk10
  - openjdk11
+ - openjdk12
 
 cache:
   directories:
