--- a/pom.xml
+++ b/pom.xml
@@ -88,9 +88,9 @@
     <maven-site-plugin.version>3.8.2</maven-site-plugin.version>
 
     <!-- The following belong together -->
-    <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
-    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-    <maven-surefire-report-plugin.version>2.22.2</maven-surefire-report-plugin.version>
+    <maven-failsafe-plugin.version>3.0.0-M4</maven-failsafe-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
+    <maven-surefire-report-plugin.version>3.0.0-M4</maven-surefire-report-plugin.version>
 
 
     <!-- MojoHaus Plugins (formerly Codehaus) -->
