Fixed #45 - Links should use https instead http

--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,13 @@
 
   <organization>
     <name>SoftwareEntwicklung Beratung Schulung</name>
-    <url>http://www.soebes.com</url>
+    <url>https://www.soebes.com</url>
   </organization>
 
   <licenses>
     <license>
       <name>Apache License 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
