--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.soebes.smpp</groupId>
   <artifactId>smpp</artifactId>
-  <version>5.1.1-SNAPSHOT</version>
+  <version>5.2.0</version>
   <packaging>pom</packaging>
 
   <name>SoEBeS Maven Parent POM</name>
@@ -121,7 +121,7 @@
     <connection>scm:git:https://github.com/khmarbaise/smpp.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/khmarbaise/smpp.git</developerConnection>
     <url>https://github.com/khmarbaise/smpp</url>
-    <tag>HEAD</tag>
+    <tag>smpp-5.2.0</tag>
   </scm>
 
   <distributionManagement>
