Fixed #155 - Upgrade maven-release-plugin to 3.0.0-M5

--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.5.3</version>
+          <version>3.0.0-M5</version>
           <configuration>
             <arguments>${arguments}</arguments>
             <goals>deploy site site:stage scm-publish:publish-scm</goals>
