Fixed #269 - Add version increment via versions-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -587,6 +587,9 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
+        <configuration>
+          <generateBackupPoms>false</generateBackupPoms>
+        </configuration>
         <executions>
           <execution>
             <id>default-cli</id>
@@ -594,9 +597,35 @@
               <processDependencyManagementTransitive>false</processDependencyManagementTransitive>
             </configuration>
           </execution>
+          <execution>
+            <id>major</id>
+            <goals>
+              <goal>set</goal>
+            </goals>
+            <configuration>
+              <newVersion>${parsedVersion.nextMajorVersion}.0.0-SNAPSHOT</newVersion>
+            </configuration>
+          </execution>
+          <execution>
+            <id>minor</id>
+            <goals>
+              <goal>set</goal>
+            </goals>
+            <configuration>
+              <newVersion>${parsedVersion.majorVersion}.${parsedVersion.nextMinorVersion}.0-SNAPSHOT</newVersion>
+            </configuration>
+          </execution>
+          <execution>
+            <id>patch</id>
+            <goals>
+              <goal>set</goal>
+            </goals>
+            <configuration>
+              <newVersion>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.nextIncrementalVersion}-SNAPSHOT</newVersion>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 
